# LearnOpenGL

./: CMakeLists.txt
assets/: 2.1.basic_lighting.fs
lib/glad/: glad.h
lib/learnopengl/: basic_lighting_diffuse.h  lighting_maps_specular.h  model_loading_test.h  shader_s.h
src/: CMakeLists.txt  glad.c  main  main.cpp
src/main.dSYM/Contents/Resources/DWARF/: main
